<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029">

        <Button
            android:id="@+id/loadTestSetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="@string/retrieve_images_from_asset"
            android:text="@string/load_test_from_asset" />

        <Button
            android:id="@+id/loadTestFromStorageButton"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="@string/retrieve_image_from_storage"
            android:text="@string/load_test_from_storage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/inferenceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selSalDetTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/saliency_detector" />

            <Spinner
                android:id="@+id/selSalDetSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selPolClassTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/polarity_classifier" />

            <Spinner
                android:id="@+id/selPolClassSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/inferenceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@string/run_inference"
        android:text="@string/inference"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="322dp"
        android:layout_height="158dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inferenceButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inferenceTimeTextView1"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:text="@string/inference_time"
                android:textAlignment="textEnd" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/inferenceTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/initial_value"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/inferenceTimeTextView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/milliseconds" />

        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inferenceResultTextView1"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/inference_result"
                android:textAlignment="textEnd" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/inferenceResultTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/initial_value"
                android:textAlignment="textStart" />

        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inferenceConfidenceTextView1"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/inference_confidence"
                android:textAlignment="textEnd" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/inferenceConfidenceTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/initial_value"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/inferenceConfidenceTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>